libraries/aptj/lib/APT/APTAPI.fixed.h

// >>>>>>>>>>>>>>>>> MACRO DEFINITIONS <<<<<<<<<<<<<<<<<<

// lHWType definitions - used with GetNumHWUnitsEx & GetHWSerialNumEx.
#define HWTYPE_BSC001		11	// 1 Ch benchtop stepper driver
#define HWTYPE_BSC101		12	// 1 Ch benchtop stepper driver
#define HWTYPE_BSC002		13	// 2 Ch benchtop stepper driver
#define HWTYPE_BDC101		14	// 1 Ch benchtop DC servo driver
#define HWTYPE_SCC001		21	// 1 Ch stepper driver card (used within BSC102,103 units)
#define HWTYPE_DCC001		22	// 1 Ch DC servo driver card (used within BDC102,103 units)
#define HWTYPE_ODC001		24	// 1 Ch DC servo driver cube
#define HWTYPE_OST001		25	// 1 Ch stepper driver cube
#define HWTYPE_MST601		26	// 2 Ch modular stepper driver module
#define HWTYPE_TST001		29	// 1 Ch Stepper driver T-Cube
#define HWTYPE_TDC001		31	// 1 Ch DC servo driver T-Cube
#define HWTYPE_LTSXXX		42	// LTS300/LTS150 Long Travel Integrated Driver/Stages
#define HWTYPE_L490MZ		43	// L490MZ Integrated Driver/Labjack
#define HWTYPE_BBD10X		44	// 1/2/3 Ch benchtop brushless DC servo driver
// Channel idents - used with MOT_SetChannel.
#define CHAN1_INDEX			0		// Channel 1.
#define CHAN2_INDEX			1		// Channel 2.
// Home direction (lDirection) - used with MOT_Set(Get)HomeParams.
#define HOME_FWD			1		// Home in the forward direction.
#define HOME_REV			2		// Home in the reverse direction.
// Home limit switch (lLimSwitch) - used with MOT_Set(Get)HomeParams.
#define HOMELIMSW_FWD		4		// Use forward limit switch for home datum.
#define HOMELIMSW_REV		1		// Use reverse limit switch for home datum.
// Stage units (lUnits) - used with MOT_Set(Get)StageAxisInfo.
#define STAGE_UNITS_MM		1		// Stage units are in mm.
#define STAGE_UNITS_DEG		2		// Stage units are in degrees.
// Hardware limit switch settings (lRevLimSwitch, lFwdLimSwitch) - used with MOT_Set(Get)HWLimSwitches
#define HWLIMSWITCH_IGNORE				1		// Ignore limit switch (e.g. for stages with only one or no limit switches).
#define HWLIMSWITCH_MAKES				2		// Limit switch is activated when electrical continuity is detected.
#define HWLIMSWITCH_BREAKS				3		// Limit switch is activated when electrical continuity is broken.
#define HWLIMSWITCH_MAKES_HOMEONLY		4		// As per HWLIMSWITCH_MAKES except switch is ignored other than when homing (e.g. to support rotation stages).
#define HWLIMSWITCH_BREAKS_HOMEONLY		5		// As per HWLIMSWITCH_BREAKS except switch is ignored other than when homing (e.g. to support rotation stages).
// Move direction (lDirection) - used with MOT_MoveVelocity.
#define MOVE_FWD			1		// Move forward.
#define MOVE_REV			2		// Move reverse.
// Profile mode settings - used with MOT_Set(Get)DCProfileModeParams.
#define DC_PROFILEMODE_TRAPEZOIDAL		0
#define DC_PROFILEMODE_SCURVE			2
// Joystick direction sense settings - used with MOT_Set(Get)DCJoystickParams.
#define DC_JS_DIRSENSE_POS			1
#define DC_JS_DIRSENSE_NEG			2
// >>>>>>>>>>>>>>>>> EXPORTED FUNCTIONS <<<<<<<<<<<<<<<<<<

// System Level Exports.
long __stdcall APTInit(void);
long __stdcall APTCleanUp(void);
long __stdcall GetNumHWUnitsEx(long lHWType, long *plNumUnits);
long __stdcall GetHWSerialNumEx(long lHWType, long lIndex, long *plSerialNum);
long __stdcall GetHWInfo(long lSerialNum, wchar_t *szModel, long lModelLen, wchar_t *szSWVer, long lSWVerLen, wchar_t *szHWNotes, long lHWNotesLen);
long __stdcall InitHWDevice(long lSerialNum);
long __stdcall EnableEventDlg(BOOL bEnable);
// Low Level Motor Specific Exports.
long __stdcall MOT_LLSetEncoderCount(long lSerialNum, long lEncCount);
long __stdcall MOT_LLGetEncoderCount(long lSerialNum, long *plEncCount);
// Motor Specific Exports.
long __stdcall MOT_SetChannel(long lSerialNum, long lChanID);
long __stdcall MOT_Identify(long lSerialNum);
long __stdcall MOT_EnableHWChannel(long lSerialNum);
long __stdcall MOT_DisableHWChannel(long lSerialNum);
long __stdcall MOT_SetVelParams(long lSerialNum, float fMinVel, float fAccn, float fMaxVel);
long __stdcall MOT_GetVelParams(long lSerialNum, float *pfMinVel, float *pfAccn, float *pfMaxVel);
long __stdcall MOT_GetVelParamLimits(long lSerialNum, float *pfMaxAccn, float *pfMaxVel);