libraries/aptj/src/aptj/bindings/APTLibrary.java

package aptj.bindings;

import org.bridj.BridJ;
import org.bridj.CRuntime;
import org.bridj.Pointer;
import org.bridj.ann.Convention;
import org.bridj.ann.Library;
import org.bridj.ann.Ptr;
import org.bridj.ann.Runtime;

/**
 * Wrapper for library <b>APT</b><br>
 * This file was autogenerated by <a href="http://jnaerator.googlecode.com/">JNAerator</a>,<br>
 * a tool written by <a href="http://ochafik.com/">Olivier Chafik</a> that <a href="http://code.google.com/p/jnaerator/wiki/CreditsAndLicense">uses a few opensource projects.</a>.<br>
 * For help, please visit <a href="http://nativelibs4java.googlecode.com/">NativeLibs4Java</a> or <a href="http://bridj.googlecode.com/">BridJ</a> .
 */
@Library(value = "APT", dependencies = {"ftd2xx.dll", "MG17Utils.dll", "MG17Comms.dll", "MG17UIThread.dll", "MG17Core.dll"})
@Runtime(CRuntime.class)
public class APTLibrary
{
  static
  {
    BridJ.register();
  }

  /**
   * <i>native declaration : lib\APT\APTAPI.fixed.h</i>
   */
  public static final int HWTYPE_BSC001 = (int) 11;
  /**
   * <i>native declaration : lib\APT\APTAPI.fixed.h</i>
   */
  public static final int HWTYPE_BSC101 = (int) 12;
  /**
   * <i>native declaration : lib\APT\APTAPI.fixed.h</i>
   */
  public static final int HWTYPE_BSC002 = (int) 13;
  /**
   * <i>native declaration : lib\APT\APTAPI.fixed.h</i>
   */
  public static final int HWTYPE_BDC101 = (int) 14;
  /**
   * <i>native declaration : lib\APT\APTAPI.fixed.h</i>
   */
  public static final int HWTYPE_SCC001 = (int) 21;
  /**
   * <i>native declaration : lib\APT\APTAPI.fixed.h</i>
   */
  public static final int HWTYPE_DCC001 = (int) 22;
  /**
   * <i>native declaration : lib\APT\APTAPI.fixed.h</i>
   */
  public static final int HWTYPE_ODC001 = (int) 24;
  /**
   * <i>native declaration : lib\APT\APTAPI.fixed.h</i>
   */
  public static final int HWTYPE_OST001 = (int) 25;
  /**
   * <i>native declaration : lib\APT\APTAPI.fixed.h</i>
   */
  public static final int HWTYPE_MST601 = (int) 26;
  /**
   * <i>native declaration : lib\APT\APTAPI.fixed.h</i>
   */
  public static final int HWTYPE_TST001 = (int) 29;
  /**
   * <i>native declaration : lib\APT\APTAPI.fixed.h</i>
   */
  public static final int HWTYPE_TDC001 = (int) 31;
  /**
   * <i>native declaration : lib\APT\APTAPI.fixed.h</i>
   */
  public static final int HWTYPE_LTSXXX = (int) 42;
  /**
   * <i>native declaration : lib\APT\APTAPI.fixed.h</i>
   */
  public static final int HWTYPE_L490MZ = (int) 43;
  /**
   * <i>native declaration : lib\APT\APTAPI.fixed.h</i>
   */
  public static final int HWTYPE_BBD10X = (int) 44;
  /**
   * <i>native declaration : lib\APT\APTAPI.fixed.h</i>
   */
  public static final int CHAN1_INDEX = (int) 0;
  /**
   * <i>native declaration : lib\APT\APTAPI.fixed.h</i>
   */
  public static final int CHAN2_INDEX = (int) 1;
  /**
   * <i>native declaration : lib\APT\APTAPI.fixed.h</i>
   */
  public static final int HOME_FWD = (int) 1;
  /**
   * <i>native declaration : lib\APT\APTAPI.fixed.h</i>
   */
  public static final int HOME_REV = (int) 2;
  /**
   * <i>native declaration : lib\APT\APTAPI.fixed.h</i>
   */
  public static final int HOMELIMSW_FWD = (int) 4;
  /**
   * <i>native declaration : lib\APT\APTAPI.fixed.h</i>
   */
  public static final int HOMELIMSW_REV = (int) 1;
  /**
   * <i>native declaration : lib\APT\APTAPI.fixed.h</i>
   */
  public static final int STAGE_UNITS_MM = (int) 1;
  /**
   * <i>native declaration : lib\APT\APTAPI.fixed.h</i>
   */
  public static final int STAGE_UNITS_DEG = (int) 2;
  /**
   * <i>native declaration : lib\APT\APTAPI.fixed.h</i>
   */
  public static final int HWLIMSWITCH_IGNORE = (int) 1;
  /**
   * <i>native declaration : lib\APT\APTAPI.fixed.h</i>
   */
  public static final int HWLIMSWITCH_MAKES = (int) 2;
  /**
   * <i>native declaration : lib\APT\APTAPI.fixed.h</i>
   */
  public static final int HWLIMSWITCH_BREAKS = (int) 3;
  /**
   * <i>native declaration : lib\APT\APTAPI.fixed.h</i>
   */
  public static final int HWLIMSWITCH_MAKES_HOMEONLY = (int) 4;
  /**
   * <i>native declaration : lib\APT\APTAPI.fixed.h</i>
   */
  public static final int HWLIMSWITCH_BREAKS_HOMEONLY = (int) 5;
  /**
   * <i>native declaration : lib\APT\APTAPI.fixed.h</i>
   */
  public static final int MOVE_FWD = (int) 1;
  /**
   * <i>native declaration : lib\APT\APTAPI.fixed.h</i>
   */
  public static final int MOVE_REV = (int) 2;
  /**
   * <i>native declaration : lib\APT\APTAPI.fixed.h</i>
   */
  public static final int DC_PROFILEMODE_TRAPEZOIDAL = (int) 0;
  /**
   * <i>native declaration : lib\APT\APTAPI.fixed.h</i>
   */
  public static final int DC_PROFILEMODE_SCURVE = (int) 2;
  /**
   * <i>native declaration : lib\APT\APTAPI.fixed.h</i>
   */
  public static final int DC_JS_DIRSENSE_POS = (int) 1;
  /**
   * <i>native declaration : lib\APT\APTAPI.fixed.h</i>
   */
  public static final int DC_JS_DIRSENSE_NEG = (int) 2;

  /**
   * System Level Exports.<br>
   * Original signature : <code>long APTInit()</code><br>
   * <i>native declaration : lib\APT\APTAPI.fixed.h:68</i>
   */
  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  public static native long APTInit();

  /**
   * Original signature : <code>long APTCleanUp()</code><br>
   * <i>native declaration : lib\APT\APTAPI.fixed.h:69</i>
   */
  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  public static native long APTCleanUp();

  /**
   * Original signature : <code>long GetNumHWUnitsEx(long, long*)</code><br>
   * <i>native declaration : lib\APT\APTAPI.fixed.h:70</i>
   */
  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  public static long GetNumHWUnitsEx(@org.bridj.ann.CLong long lHWType, Pointer<org.bridj.CLong> plNumUnits)
  {
    return GetNumHWUnitsEx(lHWType, Pointer.getPeer(plNumUnits));
  }

  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  protected native static long GetNumHWUnitsEx(@org.bridj.ann.CLong long lHWType, @Ptr long plNumUnits);

  /**
   * Original signature : <code>long GetHWSerialNumEx(long, long, long*)</code><br>
   * <i>native declaration : lib\APT\APTAPI.fixed.h:71</i>
   */
  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  public static long GetHWSerialNumEx(@org.bridj.ann.CLong long lHWType, @org.bridj.ann.CLong long lIndex, Pointer<org.bridj.CLong> plSerialNum)
  {
    return GetHWSerialNumEx(lHWType, lIndex, Pointer.getPeer(plSerialNum));
  }

  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  protected native static long GetHWSerialNumEx(@org.bridj.ann.CLong long lHWType, @org.bridj.ann.CLong long lIndex, @Ptr long plSerialNum);

  /**
   * Original signature : <code>long GetHWInfo(long, wchar_t*, long, wchar_t*, long, wchar_t*, long)</code><br>
   * <i>native declaration : lib\APT\APTAPI.fixed.h:72</i>
   */
  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  public static long GetHWInfo(@org.bridj.ann.CLong long lSerialNum, Pointer<Character> szModel, @org.bridj.ann.CLong long lModelLen, Pointer<Character> szSWVer, @org.bridj.ann.CLong long lSWVerLen, Pointer<Character> szHWNotes, @org.bridj.ann.CLong long lHWNotesLen)
  {
    return GetHWInfo(lSerialNum, Pointer.getPeer(szModel), lModelLen, Pointer.getPeer(szSWVer), lSWVerLen, Pointer.getPeer(szHWNotes), lHWNotesLen);
  }

  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  protected native static long GetHWInfo(@org.bridj.ann.CLong long lSerialNum, @Ptr long szModel, @org.bridj.ann.CLong long lModelLen, @Ptr long szSWVer, @org.bridj.ann.CLong long lSWVerLen, @Ptr long szHWNotes, @org.bridj.ann.CLong long lHWNotesLen);

  /**
   * Original signature : <code>long InitHWDevice(long)</code><br>
   * <i>native declaration : lib\APT\APTAPI.fixed.h:73</i>
   */
  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  public static native long InitHWDevice(@org.bridj.ann.CLong long lSerialNum);

  /**
   * Original signature : <code>long EnableEventDlg(BOOL)</code><br>
   * <i>native declaration : lib\APT\APTAPI.fixed.h:74</i>
   */
  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  public static native long EnableEventDlg(int bEnable);

  /**
   * Low Level Motor Specific Exports.<br>
   * Original signature : <code>long MOT_LLSetEncoderCount(long, long)</code><br>
   * <i>native declaration : lib\APT\APTAPI.fixed.h:77</i>
   */
  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  public static native long MOT_LLSetEncoderCount(@org.bridj.ann.CLong long lSerialNum, @org.bridj.ann.CLong long lEncCount);

  /**
   * Original signature : <code>long MOT_LLGetEncoderCount(long, long*)</code><br>
   * <i>native declaration : lib\APT\APTAPI.fixed.h:78</i>
   */
  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  public static long MOT_LLGetEncoderCount(@org.bridj.ann.CLong long lSerialNum, Pointer<org.bridj.CLong> plEncCount)
  {
    return MOT_LLGetEncoderCount(lSerialNum, Pointer.getPeer(plEncCount));
  }

  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  protected native static long MOT_LLGetEncoderCount(@org.bridj.ann.CLong long lSerialNum, @Ptr long plEncCount);

  /**
   * Motor Specific Exports.<br>
   * Original signature : <code>long MOT_SetChannel(long, long)</code><br>
   * <i>native declaration : lib\APT\APTAPI.fixed.h:81</i>
   */
  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  public static native long MOT_SetChannel(@org.bridj.ann.CLong long lSerialNum, @org.bridj.ann.CLong long lChanID);

  /**
   * Original signature : <code>long MOT_Identify(long)</code><br>
   * <i>native declaration : lib\APT\APTAPI.fixed.h:82</i>
   */
  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  public static native long MOT_Identify(@org.bridj.ann.CLong long lSerialNum);

  /**
   * Original signature : <code>long MOT_EnableHWChannel(long)</code><br>
   * <i>native declaration : lib\APT\APTAPI.fixed.h:83</i>
   */
  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  public static native long MOT_EnableHWChannel(@org.bridj.ann.CLong long lSerialNum);

  /**
   * Original signature : <code>long MOT_DisableHWChannel(long)</code><br>
   * <i>native declaration : lib\APT\APTAPI.fixed.h:84</i>
   */
  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  public static native long MOT_DisableHWChannel(@org.bridj.ann.CLong long lSerialNum);

  /**
   * Original signature : <code>long MOT_SetVelParams(long, float, float, float)</code><br>
   * <i>native declaration : lib\APT\APTAPI.fixed.h:85</i>
   */
  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  public static native long MOT_SetVelParams(@org.bridj.ann.CLong long lSerialNum, float fMinVel, float fAccn, float fMaxVel);

  /**
   * Original signature : <code>long MOT_GetVelParams(long, float*, float*, float*)</code><br>
   * <i>native declaration : lib\APT\APTAPI.fixed.h:86</i>
   */
  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  public static long MOT_GetVelParams(@org.bridj.ann.CLong long lSerialNum, Pointer<Float> pfMinVel, Pointer<Float> pfAccn, Pointer<Float> pfMaxVel)
  {
    return MOT_GetVelParams(lSerialNum, Pointer.getPeer(pfMinVel), Pointer.getPeer(pfAccn), Pointer.getPeer(pfMaxVel));
  }

  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  protected native static long MOT_GetVelParams(@org.bridj.ann.CLong long lSerialNum, @Ptr long pfMinVel, @Ptr long pfAccn, @Ptr long pfMaxVel);

  /**
   * Original signature : <code>long MOT_GetVelParamLimits(long, float*, float*)</code><br>
   * <i>native declaration : lib\APT\APTAPI.fixed.h:87</i>
   */
  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  public static long MOT_GetVelParamLimits(@org.bridj.ann.CLong long lSerialNum, Pointer<Float> pfMaxAccn, Pointer<Float> pfMaxVel)
  {
    return MOT_GetVelParamLimits(lSerialNum, Pointer.getPeer(pfMaxAccn), Pointer.getPeer(pfMaxVel));
  }
